[package]
name = "bumper"
version = "0.1.0"
authors = ["Lucas Denefle <lucas.denefle@converge.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.9"
semver = "0.9.0"
regex = "1.3.1"
log = "0.4.8"
env_logger = "0.6.2"
